# lost_spc

./: .gitignore  404.html  README.md  doctests.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-mkdocs.yml  doctests.yml  pypi_publish.yml  pypi_pulbish.yml  pytest.yml
constants/: index.html
docs/: constants.md  index.md
lost_spc/: constants.py
lost_spc/constants/: __init__.py
search/: search_index.json
tests/: test_constants.py
